Quality Of InventoryLoader